@@ -1,0 +1,3 @@
+1.0
+2.71828182846
+3.141592
