@@ -1,0 +1,5 @@
+Particle:     10,10j,0j,[ 90.+1.j   1.+0.j],[[ -0.10701348-0.99425757j  33.00000000+0.j        ] [ -0.10701348-0.99425757j  33.00000000+0.j        ]]
+Particle:     11,11j,-1+0j,[ 110.+2.j    2.+0.j],[[  0.08330491-0.9965241j  30.00000000+0.j       ] [  0.08330491-0.9965241j  30.00000000+0.j       ]]
+Particle:     12,12j,-2+0j,[ 132.+3.j    3.+0.j],[[  0.25459059-0.96704893j  27.00000000+0.j        ] [  0.25459059-0.96704893j  27.00000000+0.j        ]]
+Particle:     13,13j,-3+0j,[ 143.+4.j    4.+0.j],[[  0.40548536-0.91410154j  24.00000000+0.j        ] [  0.40548536-0.91410154j  24.00000000+0.j        ]]
+Particle:     14,14j,-4+0j,[ 154.+5.j    5.+0.j],[[  0.53602858-0.84419984j  21.00000000+0.j        ] [  0.53602858-0.84419984j  21.00000000+0.j        ]]
