@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** November 28, 2009 **
+New version of import_csv.py plugin added to repository.
+
 ** November 25, 2009 **
 Minor problems introduced in recent changes have been fixed.
 
